--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -32,9 +32,9 @@ spec:
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
         - name: PORT
-          value: {{ .Values.service.externalPort }}
+          value: "{{ .Values.service.externalPort }}"
         - name: INTERNAL_PORT
-          value: {{ .Values.service.internalPort }}
+          value: "{{ .Values.service.internalPort }}"
         ports:
         - containerPort: {{ .Values.service.internalPort }}
         - containerPort: {{ .Values.service.externalPort }}
